<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EneLog</string>
    <string name="title">EneLog</string>
    <string name="start">計測再開 </string>
    <string name="exit"> シャットダウン</string>
    <string name="setting"> Setting</string>
    <string name="note"> 使いたいセンサーを選んでください　</string>
    <string name="text_login_url">　ログインアドレス:　</string>
    <string name="text_upload_url">　アップロードアドレス:　</string>
    <string name="Acc"> Accelerometer </string>
    <string name="Ori"> Orientation　</string>
    <string name="GYro"> Gyroscope　</string>
    <string name="Light"> Light　</string>
    <string name="Pressure"> Pressure　</string>
    <string name="Tem"> Temperature　</string>
    <string name="Hum"> Humidity　</string>
    <string name="MAG"> Magnetic_Field　</string>
    <string name="Proximity"> Proximity　</string>
    <string name="OK"> OK　</string>
    <string name="stop"> 計測停止　</string>
    <string name="logout"> ログアウト　</string>
    <string name="login"> ログイン/長押すと設定画面に行きます　</string>
    <string name="title_activity_label_view">LabelViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_measure_label_time">MeasureLabelTime</string>
    <string name="title_activity_write_file">WriteFile</string>
    <string name="title_activity_data_view">DataView</string>

</resources>
