<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <TextView  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content" 
         android:layout_gravity="center"
        android:gravity="center" 
        android:id="@+id/title" 
        android:textSize="60dp"
        android:textStyle="bold"/>
       
        <TextView
        android:id="@+id/url_link3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="100px"
        android:textSize="20dp"
        android:textStyle="bold" />
        
        <Button  
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"
        android:layout_marginBottom="100px"  
        android:text="@string/start"  
        android:id="@+id/start"   /> 
        
       
        <Button  
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content" 
        android:layout_marginBottom="100px"  
        android:text="@string/logout"  
        android:id="@+id/logout"  />  
        
        <Button  
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:text="@string/exit"  
        android:id="@+id/exit"  /> 
         
</LinearLayout>

     